--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/add_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_city" />
+
     <ListView
+        android:id="@+id/city_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/city_list" />
-
-
+        android:layout_height="match_parent" />
 </LinearLayout>
