--- a/app/src/main/res/layout/activity_add_city.xml
+++ b/app/src/main/res/layout/activity_add_city.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:id="@+id/add_city"
+        android:id="@+id/add_city_button"
         android:text="@string/add_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
