--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,13 @@
             android:id="@+id/button_add"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="ADD CITY" />
+            android:text="@string/add_city" />
 
         <Button
             android:id="@+id/button_clear"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="ClEAR ALL" />
+            android:text="@string/clear_all" />
     </LinearLayout>
 
     <ListView
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="City Name"
+            android:hint="@string/city_name"
             android:inputType="textCapWords"
             android:textColor="#000000" />
 
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="CONFIRM" />
+            android:text="@string/confirm" />
 
     </LinearLayout>
 
